--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.andyengle.peanutbutter"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-
-
-    </application>
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	package="com.andyengle.peanutbutter"
+	android:versionCode="1"
+	android:versionName="1.0">
+	<uses-sdk
+		android:minSdkVersion="7"/>
+	<application
+		android:icon="@drawable/icon"
+		android:label="@string/app_name">
+		<activity
+			android:name=".Main"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action
+					android:name="android.intent.action.MAIN"/>
+				<category
+					android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+	</application>
+	<uses-permission
+		android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
